# python_taskneo

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
document_uploader/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
document_uploader/auth/: authentication.py
document_uploader/db/: base.py  database.py  utils.py
document_uploader/db/DAO/: doc_dao.py  user_dao.py
document_uploader/db/migrations/: env.py
document_uploader/db/models/: __init__.py  doc_model.py  user_model.py
document_uploader/services/: __init__.py  doc_service.py  user_service.py
document_uploader/tests/: __init__.py
document_uploader/web/: __init__.py  application.py  lifetime.py
document_uploader/web/api/: router.py
document_uploader/web/api/document/: __init__.py  document_controller.py  document_schema.py
document_uploader/web/api/monitoring/: __init__.py
document_uploader/web/api/user/: __init__.py  jwtuser.py  user_controller.py  user_schema.py
